# aoc

./: pyproject.toml
01/: report-repair.py
2020/: 01.py
aoc/: utils.py
aoc/year/2015/: 01.py  02.py  03.py  04.py  05.py
aoc/year/2020/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py
aoc/year/2021/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py
