[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["aaron markey <markey@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
