[tool.black]
line-length = 120
target-version = ['py310']

[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["aaron markey <markey@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
